Update basepath and regenerate app
